--- a/be/src/main/resources/application-prod.properties
+++ b/be/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 spring.application.name=be
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-logging.level.issuetracker.be=debug
+logging.level.issuetracker.be=info
