--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: 이슈트래커
+name: 도커로 ci/cd 구축
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - be-dev-gromit
 
 jobs:
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +20,7 @@ jobs:
           java-version: 17
 
       - name: applcation.yml 파일 만들기
-        run: echo "${{ secrets.APPLICATION.PROPERTIES }}" > ./src/main/resources/application.yml
+        run: echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
 
       - name: 테스트 및 빌드하기
         run: ./gradlew clean build
@@ -28,15 +28,26 @@ jobs:
       - name: 빌드된 파일 이름 변경하기
         run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
 
-      - name: SCP로 EC2에 빌드된 파일 전송하기
-        uses: appleboy/scp-action@v0.1.7
+      - name: AWS Resource 에 접근할 수 있게 AWS credentials 설정
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: project.jar
-          target: /home/ubuntu/issuetracker/tobe
-          
+          aws-region: ap-northeast-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
+
+      - name: ECR에 로그인하기
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Docker 이미지 생성
+        run: docker build -t issue-tracker .
+
+      - name: Docker 이미지에 Tag 붙이기
+        run: docker tag issue-tracker ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
+
+      - name: ECR에 Docker 이미지 Push하기
+        run: docker push ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
+
       - name: SSH로 EC2에 접속하기
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -44,14 +55,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script_stop: true
-          scripts: |
-            rm -rf /home/ubuntu/issuetracker/be
-            mkdir /home/ubuntu/issuetracker/be
-            mv /home/ubuntu/issuetracker/tobe/project.jar home/ubuntu/issuetracker/be/project.jar
-            cd /home/ubuntu/issuetracker/be
-            sudo fuser -k -n tcp 8080 || true
-            nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
-            rmj -rf /home/ubuntu/issuetracker/tobe
-            
-            
-  
+          script: |
+            docker stop issue-tracker || true
+            docker rm issue-tracker || true
+            docker pull ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
+            docker run -d --name issue-tracker -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/instagram-server:latest
