--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,10 @@ jobs:
           echo "${{ secrets.APPLICATION_YML }}" > ./be/src/main/resources/application.yml
 
       - name: 테스트 및 빌드하기
-        run: ./gradlew clean build
+        run: |
+          cd be
+          pwd
+          ./gradlew clean build
 
       - name: 빌드된 파일 이름 변경하기
         run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
