--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: 테스트 및 빌드하기
         run: |
           cd be
-          pwd
+          chmod +x ./gradlew
           ./gradlew clean build
 
       - name: 빌드된 파일 이름 변경하기
