--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    env:
+      SPRING_PROFILES_ACTIVE: prod
     steps:
       - name: Github Repo에 올린 파일 불러오기
         uses: actions/checkout@v4
