--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,8 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      SPRING_PROFILES_ACTIVE: prod
+    
     steps:
       - name: Github Repo에 올린 파일 불러오기
         uses: actions/checkout@v4
@@ -29,7 +28,7 @@ jobs:
         run: |
           cd be
           chmod +x ./gradlew
-          ./gradlew clean build
+          ./gradlew clean build -Dspring.profiles.active=prod
 
       - name: 빌드된 파일 이름 변경하기
         run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
