--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,10 +29,12 @@ jobs:
           cd be
           ls
           chmod +x ./gradlew
-          ./gradlew clean build
+          ./gradlew clean build -x test
 
       - name: 빌드된 파일 이름 변경하기
-        run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
+        run: |
+        pwd
+        mv ./build/libs/*SNAPSHOT.jar ./project.jar
 
       - name: AWS Resource 에 접근할 수 있게 AWS credentials 설정
         uses: aws-actions/configure-aws-credentials@v4
