dockerfile에 jar파일 위치 수정

--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:17-jdk-alpine
-COPY ./build/libs/*SNAPSHOT.jar airdnb.jar
+COPY ./be/build/libs/*SNAPSHOT.jar airdnb.jar
 ENV TZ=Asia/Seoul
 ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "airdnb.jar"]
