--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,7 +53,7 @@ jobs:
           cd be
           ls
           pwd
-          
+          ls ./build/libs/*SNAPSHOT.jar
           docker build -t issue-tracker .
 
       - name: Docker 이미지에 Tag 붙이기
