--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -1,4 +1,3 @@
 FROM eclipse-temurin:17-jdk-alpine
-COPY ./build/libs/*SNAPSHOT.jar airdnb.jar
 ENV TZ=Asia/Seoul
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "airdnb.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "project.jar"]
