--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -78,4 +78,4 @@ jobs:
             docker stop issue-tracker || true
             docker rm issue-tracker || true
             docker pull ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
-            docker run -d --name issue-tracker -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/instagram-server:latest
+            docker run -d --name issue-tracker -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
