--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,13 +27,11 @@ jobs:
       - name: 테스트 및 빌드하기
         run: |
           cd be
-          ls
           chmod +x ./gradlew
           ./gradlew clean build -x test
 
       - name: 빌드된 파일 이름 변경하기
         run: |
-          pwd
           cd be
           mv ./build/libs/*SNAPSHOT.jar ./project.jar
 
@@ -54,17 +52,11 @@ jobs:
           docker build -t issue-tracker .
 
       - name: Docker 이미지에 Tag 붙이기
-        run: |
-        
-          ls
-          pwd
-          docker tag issue-tracker ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
+        run: docker tag issue-tracker ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
 
       - name: ECR에 Docker 이미지 Push하기
         run: |
           cd be
-          ls
-          pwd
           docker push ${{ steps.login-ecr.outputs.registry }}/issue-tracker:latest
 
       - name: SSH로 EC2에 접속하기
